Bootstrap/css/styles.css
body {
    font-family: "Montserrat", sans-serif;
    text-align: center !important;
}

h1, h2, h3, h4, h5, h6 {
    font-family: "Montserrat-Black", sans-serif;
    font-weight: 900 !important;
}

p {
    color: #8f8f8f;
}

/* Heading */

.big-heading{
    font-size: calc(1.375rem + 1.5vw) !important;
    line-height: 1.5 !important;
    font-weight: 900 !important;
}

.setcion-heading{
    font-size: 3rem;
    line-height: 1.5;
}

.container-fluid {
    padding: 7% 15% !important;
}

/* Sections */

.colored-section {
    background-color: #ff4c68;
    color: white;
}

.white-section{
    background-color: white;
}

/* Navigation bar */

.navbar {
    padding: 0 0 4.5rem !important;
}

.navbar-brand {
    font-family: 'Ubuntu', sans-serif;
    font-size: xx-large !important;
    font-weight: bold;
}

.nav-item {
    padding: 0 18px;
}

.nav-link {
    font-family: 'Montserrat-light', sans-serif;
    font-size: 1.2rem;
}

/* Download button */

.download-button {
    margin: 5% 3% 5% 0;
}

/* Title section */

#title .container-fluid{
    padding: 3% 15% 7% !important;
    text-align: left;
}


.title-image {
    width: 16%;

    /* rotate image */
    transform: rotate(25deg);
    position: absolute;
    right: 23%;
}

#features {
    /* padding: 7% 15%; */
    
    position: relative;
}

.feature-title{
    font-size: 1.5rem;
}

.feature-box {
    padding: 5% !important;
}

.icon {
    font-size: 3.5rem;
    color: #ef8172;
}

.icon:hover {
    color: #ff4c68;
}

/* testimonials section */

#testimonials {
    background-color: #ef8172;
}

.testimonial-text{
    font-size: 3rem;
    line-height: 1.5;
}

.testimonial-image {
    width: 10%;
    border-radius: 100%;
    margin: 20px;
}

#press {
    background-color: #ef8172;
    padding-bottom: 3%;
}

.press-logo {
    width: 15%;
    margin: 20px 20px 50px;
}

/* pricing section */

#pricing {
    padding: 100px;
}

.price-text{
    font-size: 2.5rem;
    line-height: 1.5;
}

.pricing-column {
    padding: 3% 2%;
}

/* CTA section */



/* Footer section */



/* 1028 */
@media (max-width: 991px) {
    #title {
        text-align: center;
    }

    .title-image {
        position: static;
        transform: rotate(0deg);
        width: 50%;
    }
}

